# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rl2020"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.24"
rand = "0.8.5"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
wasm-bindgen = "0.2.83"
