[package]
name = "rl2020"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/noandrea/rl2020.rs"
homepage = "https://github.com/noandrea/rl2020.rs"
description = "Implementation of the RevocationList2020 format"
keywords = ["SSI", "identity", "privacy", "revocation-lists", "revocation-registry"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.13.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
flate2 = "1.0.24"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
wasm-bindgen = "0.2.83"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
rand = "0.8.5"
wasm-bindgen-test = "0.3.33"

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false
# wasm-opt = ['-Os', '--enable-mutable-globals']
wasm-opt = ['-Os']


[profile.release]
lto = true
opt-level = 's'

